added video prediction : still needs work

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,11 @@
 
         <br />
         <br />
+       <input type="file" id="file-input" />
+<button id="read-button">Read File</button>
+<pre id="file-contents"></pre>
 
-        <input type="button" id="pred_btn" value="predict"/>
+        <input type="button" id="pred_btn" value="predict"/><input type="button" id="pred_video_btn" value="predict_video"/>
 
         <br />
         <br />
