fixup! added video prediction : working
todo: stop function for video

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,7 @@
 <pre id="file-contents"></pre>
 
         <input type="button" id="pred_btn" value="predict"/><input type="button" id="pred_video_btn" value="predict_video"/>
+        <input type="button" id="stop_btn" value="stop video"/>
 
         <br />
         <br />
