--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='flask.ico') }}">
     <title>{{title}}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     {% block head %} {% endblock %}
 </head>
 <body>
