--- a/templates/comparison.html
+++ b/templates/comparison.html
@@ -6,22 +6,33 @@
 
 
 
-    <div style = "display: flex; justify-content: center">
-        <label id="pred_label" >pred: </label>
-        <label id="pred_txt" > 0 </label>
-    </div>
-    <br>
-    <br>
-    <div class="comparison-2 "  >
+<div style="display: flex; justify-content: center; color: white; font-weight: bold;">
+    <p id="pred_label">pred: </p>
+    <p id="pred_txt"> 0 </p>
+    
+</div>
+<div class="slidecontainer" style="display: flex; justify-content: center; color: white; font-weight: bold;">
+    <label for="myRange">Threshold</label>
+    <input type="range" min="1" max="5000" value="2500" class="slider" id="myRange">
+    <p id="demo"></p>
+</div>
+
+<div style=" display: flex; justify-content: center">
+
+    <div class="comparison-2 ">
         <div class="content">
 
-            <br>
 
-            <div >
+
+            <div>
                 <img id="pred_img" src="{{ url_for('static', filename='default.png') }}" alt="density map">
+                <br>
+                <img id="pred_img" src="{{ url_for('static', filename='scale.jpg') }}" alt="density map"
+                    style="width: 100%;">
             </div>
         </div>
     </div>
+</div>
 
 
 
