--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,12 @@
             <option value="JHU-CROWD">JHU-CROWD</option>
         </select> -->
 
-        <br />
+      
         
-        <div class="card card-body" style="width: 18rem;">
+        <div class="card card-body" style="display: flex;width: 18rem;">
             <label  for="models">Model:</label>
             <select class="btn btn-info dropdown-toggle" style=" display:flex;"name="models" id="models">
+                <option value="mcnn">MCNN</option>
                 <option value="alexnet">AlexNet</option>
                 <option value="vgg">VGG</option>
                 <option value="vgg_decoder">VGG_Decoder</option>
@@ -33,29 +34,21 @@
                 <option value="scar">SCAR</option>
                 <option value="csrnet">CSRNet</option>
                 <option value="sanet">SANet</option>
-                <option value="mcnn">MCNN</option>
             </select>
+            <br>
         </div>
-
-        <br />
-        <br />
-
-        <!-- {% include "slider.html" %} -->
-
-        <br />
-        <br />
-       <input class="btn btn-success" type="file" id="file-input" />
+        <input class="btn btn-success" type="file" id="file-input" style="margin-top: 0.5em;"/>
+        
 <!-- <button id="read-button">Read File</button>
 <pre id="file-contents"></pre> -->
         <br><br>
         <div class="btn-group">
-            <input type="button" class="btn btn-outline-secondary" style="margin-left: 0.5em"id="pred_btn" value="predict"/>
-            <input type="button" class="btn btn-outline-secondary" style="margin-left: 0.5em"id="pred_video_btn" value="predict_video"/>
-            <input type="button" class="btn btn-outline-secondary" style="margin-left: 0.5em"id="stop_btn" value="stop video"/>
+            <input type="button" class="btn btn-secondary" style="margin-left: 0.5em"id="pred_btn" value="predict"/>
+            <input type="button" class="btn btn-secondary" style="margin-left: 0.5em"id="pred_video_btn" value="predict_video"/>
+            <input type="button" class="btn btn-secondary" style="margin-left: 0.5em"id="stop_btn" value="stop video"/>
         </div>
 
-        <br />
-        <br />
+        
 
     </div>
         <div >
