--- a/templates/index.html
+++ b/templates/index.html
@@ -37,13 +37,13 @@
             </select>
             <br>
         </div>
-        <input class="btn btn-success" type="file" id="file-input" style="margin-top: 0.5em;"/>
+        <!-- <input class="btn btn-success" type="file" id="file-input" style="margin-top: 0.5em;"/> -->
         
 <!-- <button id="read-button">Read File</button>
 <pre id="file-contents"></pre> -->
         <br><br>
         <div class="btn-group">
-            <input type="button" class="btn btn-secondary" style="margin-left: 0.5em"id="pred_btn" value="predict"/>
+            <input type="button" class="btn btn-secondary" id="pred_btn" value="predict"/>
             <input type="button" class="btn btn-secondary" style="margin-left: 0.5em"id="pred_video_btn" value="predict_video"/>
             <input type="button" class="btn btn-secondary" style="margin-left: 0.5em"id="stop_btn" value="stop video"/>
         </div>
