--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,10 +3,11 @@ h1 {
 }
 
 body {
+    /* background-color: red; */
     
-    background-image: url('../back.jpg');
+    background-image: url('../img1.jpg');
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: 100% 115%;
     
 }
 
