--- a/templates/video.html
+++ b/templates/video.html
@@ -27,7 +27,7 @@
             <div>
                 <img id="pred_img" src="{{ url_for('static', filename='default.png') }}" alt="density map">
                 <br>
-                <img id="pred_img" src="{{ url_for('static', filename='scale.jpg') }}" alt="density map"
+                <img src="{{ url_for('static', filename='scale.jpg') }}" alt="density map"
                     style="width: 100%;">
             </div>
         </div>
