--- a/templates/compare.html
+++ b/templates/compare.html
@@ -43,7 +43,10 @@
     <br />
     <br />
 
-    <input type="button" class="btn btn-secondary" id="pred_btn" value="Predict" />
+    <div class="btn-group">
+        <a class="btn btn-secondary" id="home" href="{{ url_for('home')}}">Home</a>
+        <input type="button" class="btn btn-secondary" id="pred_btn" value="Predict" style="margin-left: 0.5em;" />
+    </div>
 
     <br />
     <br />
