--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,27 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     {% block head %} {% endblock %}
 </head>
+
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
+        <!-- <h1 style="color: white">{{ title }}</h1> -->
+        <span class="navbar-brand mb-0 h1" style="font-size: 1.75em;">{{ title }}</span>
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" style="float: right;">
+            <ul class="navbar-nav">
+                <li class="nav-item {{ 'active' if active_page == 'home' else '' }}">
+                    <a class="nav-link" href="{{url_for('home')}}">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item {{ 'active' if active_page == 'compare' else '' }}">
+                    <a class="nav-link" href="{{url_for('compare')}}">Compare Models<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item {{ 'active' if active_page == 'about' else '' }}">
+                    <a class="nav-link" href="{{url_for('about_us')}}">About Us <span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     {% block body %} {% endblock %}
 </body>
+
 </html>
