--- a/templates/compare.html
+++ b/templates/compare.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
-
+{% set active_page = "compare" %}
 {% block body %}
 
 
-<div class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
-    <h1 style="color: white">{{ title }}</h1>
-</div>
 <div class="container">
 
     <div class="card card-body" style="display: flex;width: 18rem;">
@@ -44,8 +41,7 @@
     <br />
 
     <div class="btn-group">
-        <a class="btn btn-secondary" id="home" href="{{ url_for('home')}}">Home</a>
-        <input type="button" class="btn btn-secondary" id="pred_btn" value="Predict" style="margin-left: 0.5em;" />
+        <input type="button" class="btn btn-secondary" id="pred_btn" value="Predict"/>
     </div>
 
     <br />
