--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
 {% extends "base.html" %}
-
+{% set active_page = "home" %}
 {% block body %}
 
 
-<div class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
-    <h1 style="color: white">{{ title }}</h1>
-</div>
+
 <div class="container">
 
     <div class="card card-body" style="display: flex;width: 18rem;">
@@ -27,7 +25,7 @@
 
     <br><br>
     <div class="btn-group">
-        <a class="btn btn-secondary" id="pred_btn" href="{{ url_for('compare')}}">Compare Models</a>
+        <!-- <a class="btn btn-secondary" id="pred_btn" href="{{ url_for('compare')}}">Compare Models</a> -->
         <input type="button" class="btn btn-secondary" style="margin-left: 0.5em" id="pred_video_btn"
             value="Predict Video" />
         <input type="button" class="btn btn-secondary" style="margin-left: 0.5em" id="stop_btn" value="Stop Video" />
