--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,13 @@
 </head>
 
 <body>
+    {% if session['user'] %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
         <!-- <h1 style="color: white">{{ title }}</h1> -->
         <span class="navbar-brand mb-0 h1" style="font-size: 1.75em;">{{ title }}</span>
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav" style="float: right;">
+            
             <ul class="navbar-nav">
                 <li class="nav-item {{ 'active' if active_page == 'home' else '' }}">
                     <a class="nav-link" href="{{url_for('home')}}">Home <span class="sr-only">(current)</span></a>
@@ -27,9 +29,20 @@
                 <li class="nav-item {{ 'active' if active_page == 'about' else '' }}">
                     <a class="nav-link" href="{{url_for('about_us')}}">About Us <span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item {{ 'active' if active_page == 'about' else '' }}">
+                    <a class="nav-link" href="{{url_for('logout')}}">Logout<span class="sr-only">(current)</span></a>
+                </li>
+                
             </ul>
+            
         </div>
     </nav>
+    {% else %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
+        <!-- <h1 style="color: white">{{ title }}</h1> -->
+        <span class="navbar-brand mb-0 h1" style="font-size: 1.75em;">{{ title }}</span>
+    </nav>
+    {% endif %}
     {% block body %} {% endblock %}
 </body>
 
