--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,13 @@
 {% block body %}
 
 
-
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for msg in messages %} 
+            <p style="display: grid; text-align:center; color:white;">{{ msg }}</p>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
 <div class="container">
 
     <div class="card card-body" style="display: flex;width: 18rem;">
