--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
         <div class="title">Our Guide</div>
         <div class="member">
             <div class="photo">
-                <img src="{{ url_for('static', filename='images/sirishbhat.jpg') }}" />
+                <img src="{{ url_for('static', filename='images/ranganath.jpg') }}" />
             </div>
             <div class="name">Mr.Ranganatha K</div>
             <div class="profession">(Assistant Professor)</div>
@@ -30,7 +30,7 @@
             <div class="col-sm-3">
                 <div class="member">
                     <div class="photo">
-                        <img src="{{ url_for('static', filename='images/sirishbhat.jpg') }}" />
+                        <img src="{{ url_for('static', filename='images/chandan.jpg') }}" />
                     </div>
                     <div class="name">Chandan Rao</div>
                     <div class="rollno">(4CB18IS010)</div>
@@ -39,7 +39,7 @@
             <div class="col-sm-3">
                 <div class="member">
                     <div class="photo">
-                        <img src="{{ url_for('static', filename='images/sirishbhat.jpg') }}" />
+                        <img src="{{ url_for('static', filename='images/thushar.jpg') }}" />
                     </div>
                     <div class="name">Thushar Kulal</div>
                     <div class="rollno">(4CB18IS048)</div>
@@ -48,9 +48,9 @@
             <div class="col-sm-3">
                 <div class="member">
                     <div class="photo">
-                        <img src="{{ url_for('static', filename='images/sirishbhat.jpg') }}" />
+                        <img src="{{ url_for('static', filename='images/udbhav.jpg') }}" />
                     </div>
-                    <div class="name">Udhbhav U</div>
+                    <div class="name">Udbhav U</div>
                     <div class="rollno">(4CB18IS051)</div>
                 </div>
             </div>
