--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
         <!-- <a class="btn btn-secondary" id="pred_btn" href="{{ url_for('compare')}}">Compare Models</a> -->
         <input type="button" class="btn btn-secondary" style="margin-left: 0.5em" id="pred_video_btn"
             value="Predict Video" />
-        <input type="button" class="btn btn-secondary" style="margin-left: 0.5em" id="stop_btn" value="Stop Video" />
+        <input type="hidden" class="btn btn-secondary" style="margin-left: 0.5em" id="stop_btn" value="Stop Video" />
     </div>
 
 
